# p4ds-starter

./: README.md  first.ipynb  first.py  pyproject.toml
.devcontainer/: devcontainer.json
