[tool.poetry]
name = "python3-poetry-pyenv-2"
version = "0.1.0"
description = ""
authors = ["Your Name <your.name@here.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
